# linux-dev-hello-autotools

./: .cproject  .gitignore  .project  Makefile.am  Makefile.in  README.adoc  configure  configure.ac
doc/: Makefile.am  Makefile.in  README.adoc
src/: Makefile.am  Makefile.in  hello.c  net_interfaces.c
